samples/_failures_safe/1761005845_faa823_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7dc0769.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_b7dc0769.c:134:9: error: expected declaration or statement at end of input
  134 |         }
      |         ^
./samples/SAFE/__tmp_b7dc0769.c:134:9: error: expected declaration or statement at end of input
